# ringdrop

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  cliff.toml  install.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  notify-packaging.yml  release.yml  tests.yml
docs/: cli.md  install.md
src/: config.rs  grants.rs  lib.rs  local_store.rs  main.rs  ticket.rs  util.rs
src/cli/: command.rs  mod.rs
src/cli/command/: blob.rs  daemon.rs  grant.rs  id.rs  info.rs  mod.rs  peer.rs  receive.rs  remote.rs  ring.rs  share.rs  tag.rs
src/core/: grants.rs  mod.rs  node.rs  peers.rs  protocol.rs  ticket.rs
src/core/protocol/: catalog.rs  mod.rs  receiver.rs  ring_receiver.rs  rings.rs  sender.rs
src/daemon/: client.rs  mod.rs  pid.rs  protocol.rs
src/daemon/server/: mod.rs
src/daemon/server/handlers/: blob.rs  grant.rs  mod.rs  peer.rs  receive.rs  remote.rs  ring.rs  tag.rs
src/registry/: mod.rs  ring.rs
tests/: blob_management.rs  daemon.rs  ring_gate.rs  server_ipc.rs  transfer.rs
tests/common/: mod.rs
