[workspace]
resolver = "2"

[package]
name = "ringdrop"
version = "0.10.0"
edition = "2021"
authors = ["Enrico Fusto"]
license = "MIT"
description = "P2P streamed file transfer with ring-based access control, built on iroh and bao protocols"
repository = "https://github.com/rikettsie/ringdrop"
keywords = ["p2p", "cli", "file-transfer", "ring-authorization", "holepunching"]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "ringdrop"
path = "src/lib.rs"

[[bin]]
name = "rdrop"
path = "src/main.rs"

[dependencies]
iroh-rings = { version = "0.6.0", features = ["redb", "fs", "mem"] }

# Core components: transport protocol, chunking, concurrency
iroh = "0.98.2"
iroh-blobs = { version = "0.100", features = ["fs-store"] }
iroh-io = "0.6"
bao-tree = "0.16"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
redb = "4"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Other utilities
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
data-encoding = "2"           # base32 for human-friendly ticket display
walkdir = "2"                 # directory traversal for multi-file send
futures-lite = "2"
dirs-next = "2"               # home directory for default data path
indicatif = "0.17"            # terminal progress bars
serde_millis = "0.1.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/rdrop-{ version }-{ target }.{ archive-format }"
bin-dir = "rdrop{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
